# SpursSurveyResults

./: .gitignore  24-25_seasondata.xlsx  pyproject.toml
.kiro/specs/spurs-survey-automation/: design.md  requirements.md  tasks.md
archive/: index.html  match.html
archive-app/: deploy.sh  index.html  package-lock.json  package.json  vite.config.ts
archive-app/public/data/: all_ratings.csv  matches.json
archive-app/src/: App.tsx  types.ts
archive-app/src/components/: MatchDetail.tsx  MatchDetailPage.tsx  MatchList.tsx
archive/css/: style.css
archive/js/: app.js
docs/: index.html
docs/assets/: index-BB9XIcZJ.js  index-BCnayERb.js  index-BSy_NK3r.js  index-BYiqjj8y.js  index-Bj2V2hsS.js  index-CceMN1OX.css  index-D09oHFM4.css  index-DKov-Iay.css  index-DaLpPZiF.js  index-DabdPKWO.css  index-FNMhtQIw.js  index-Y8Ydf2Mx.css
legacy_scripts/: crop_player_images.py  download_players_improved.py  download_spurs_players.py  download_spurs_selenium.py  extract_fbref_final.py  extract_spurs_stats.py  extract_spurs_stats_fixed.py  get_fbref_tables.py  get_fbref_tables_selenium.py  get_player_photos.py
reference/: FBREF_DATA_EXTRACTION_GUIDE.md  Tottenham_2024-2025_Stats.xlsx
scripts/: create_placeholder.py  import_season_data.py  match_results.py
src/spurs_survey/: __init__.py  __main__.py  archive.py  cli.py  formations.py  infographic.py  match_data.py  models.py  results.py  storage.py  survey.py
tests/: conftest.py  test_archive.py  test_formations.py  test_infographic.py  test_match_data.py  test_results.py  test_survey.py
(+90 files in other folders)
